[package]
name = "d3d9-inject-rs-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d3d9"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef", "d3d9", "sysinfoapi", "winbase"] }
user32-sys = "0.2.0"
lazy_static = "1.4.0"
anyhow = "1.0.66"
libloading = "0.7"
widestring = "1.0.2"

[profile.release]
panic = "abort"