[package]
name = "d3d9-inject-suba-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d3d9"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef", "d3d9", "sysinfoapi", "winbase", "psapi"] }
user32-sys = "0.2.0"
lazy_static = "1.4.0"
anyhow = "1.0.66"
libloading = "0.7"
widestring = "1.0.2"
keyboard_query = "0.1.0"
dynasmrt = "1.2.3"
region = "3.0.0"
libc = "0.2.137"
pretty_env_logger = "0.4.0"
log = "0.4.17"
squirrel2-kaleido-rs = { git = "https://github.com/nikvoid/squirrel2-kaleido-rs" }

[profile.release]
panic = "abort"