[package]
name = "d3d9-inject-suba-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d3d9"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef", "d3d9", "sysinfoapi", "winbase", "psapi"] }
user32-sys = "0.2.0"
lazy_static = "1.4.0"
libloading = "0.7"
widestring = "1.0.2"
keyboard_query = "0.1.0"
dynasmrt = "1.2.3"
region = "3.0.0"
anyhow = { workspace = true }
libc = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
squirrel2-kaleido-rs = { workspace = true }
sq-common = { workspace = true }