[package]
name = "d3d9-inject-suba-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d3d9"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
scrawl = { git = "https://github.com/nikvoid/scrawl" }
dylib-mitm = { git = "https://github.com/nikvoid/dylib-mitm" }
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef", "d3d9", "sysinfoapi", "winbase", "psapi"] }
ctrlc = "3.2.3"
user32-sys = "0.2.0"
lazy_static = "1.4.0"
dynasmrt = "1.2.3"
region = "3.0.0"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
libc = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
atomic = { workspace = true }
crossbeam = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
squirrel2-kaleido-rs = { workspace = true }
sq-common = { workspace = true }
util-proc-macro = { workspace = true }
