[package]
name = "sq-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.2"
squirrel2-kaleido-rs = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
util-proc-macro = { workspace = true }
log = { workspace = true }
atomic = { workspace = true }
crossbeam = { workspace = true }