[package]
name = "util-proc-macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "util_proc_macro"
path = "src/lib.rs"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.105", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
darling = "0.14"